<resources>
    <string name="app_name">Fingerhut</string>
    <string name="login">Log in</string>
    <string name="account_number">Account number</string>
    <string name="password">Password</string>
    <string name="pin">PIN</string>
    <string name="forgot_pin">Forgot pin?</string>
    <string name="order_new">Order new pin</string>
    <string name="accountnumber_error">Accout number not valid</string>
    <string name="password_wrong">Password not valid</string>
    <string name="sp_accountnumber" translatable="false">SHARED_PREFERENCES_accountnumber</string>
    <string name="sp_accountkey" translatable="false">SHARED_PREFERENCES_accountkey</string>
    <string name="sp_accountslist" translatable="false">SHARED_PREFERENCES_accountslist</string>
    <string name="sp_device_token" translatable="false">SHARED_PREFERENCES_device_token</string>
    <string name="sp_encrypted_private_key_hex" translatable="false">SHARED_PREFERENCES_sp_encrypted_private_key_hex</string>
    <string name="sp_encrypted_private_key_hex_2" translatable="false">SHARED_PREFERENCES_sp_encrypted_private_key_hex_2</string>
    <string name="sp_group" translatable="false">SHARED_PREFERENCES_group</string>
    <string name="sp_identifier" translatable="false">de.repictures.stromberg.PEFERENCES_FILE_KEY</string>
    <string name="error">Error</string>
    <string name="citizen_account">Citizen account</string>
    <string name="zero_money" translatable="false">0,00S</string>
    <string name="account_owner">Owner</string>
    <string name="account_balance_format">%1$sS</string>
    <string name="transfer">Transfer</string>
    <string name="inbox">Inbox</string>
    <string name="domain">Company</string>
    <string name="deposit">Deposit</string>
    <string name="title_activity_transfers">Transfers</string>
    <string name="transition_dialog" translatable="false">transition_dialog</string>
    <string name="cancel">Cancel</string>
    <string name="accountnumber_short">Accnr</string>
    <string name="optionee">Optionee</string>
    <string name="title_activity_transfer_dialog_fragment">New transfer</string>
    <string name="amount">Amount</string>
    <string name="currency" translatable="false">S</string>
    <string name="execute_later">Execute later</string>
    <string name="execute_at">Execute at</string>
    <string name="purpose">Purpose</string>
    <string name="oclock">" "</string>
    <string name="error_owner_empty">There must be an optionee</string>
    <string name="transfer_success">Transfer was successful</string>
    <string name="transfer_receiver_not_exist">The given receiver does not exist</string>
    <string name="transfer_no_money">You don\'t have enough money</string>
    <string name="error_account_empty">You have to give an accountnumber</string>
    <string name="server_error">Server error</string>
    <string name="cancel_transfer">Cancel transfer</string>
    <string name="you_will_lose_data">All your filled in fields will be emptied</string>
    <string name="delete_transfer">Delete transfer</string>
    <string name="delete">Delete</string>
    <string name="error_amount_empty">Invalid</string>
    <string name="transfer_receiver_equals_sender">You cannot transfer money to yourself</string>
    <string name="scan">Scan</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Fingerhut</string>
    <string name="ocr_header" translatable="false">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="title_activity_scan">Scan Bar- or QR-Code</string>
    <string name="buy">Buy</string>
    <string name="request_camera_title">Allow camera access</string>
    <string name="request_camera_text">In order to scan barcodes, we need access to your camera</string>
    <string name="grant">Grant</string>
    <string name="deny">Deny</string>
    <string name="swipe_to_view">Swipe up to view</string>
    <string name="more_results" formatted="false">%1$d more results</string>
    <string name="sp_featureslist" translatable="false">SHARED_PREFERENCES_featureslist</string>
    <string name="title_activity_auth_scan">Scan Authentification Code</string>
    <string name="authenticate">Authenticate</string>
    <string name="sp_authcode" translatable="false">SHARED_PREFERENCES_authcode</string>
    <string name="not_authenticated">You are not authenticated</string>
    <string name="wrong_auth">You are not athentificated for this account</string>
    <string name="internet_problems">Network error: check your internet connection</string>
    <string name="no_such_authkey">This is not a valid authentification key</string>
    <string name="authenticate_progress">Authentificate…</string>
    <string name="OK">OK</string>
    <string name="show_transfer_detail_dialog_title">Transfer from %1$2s at %2$2s</string>
    <string name="transfer_type">Type</string>
    <string name="transfer_sender">Sender</string>
    <string name="transfer_receiver">Receiver</string>
    <string name="send_transfer_loading">Sending transfer…</string>
    <string name="notification_channel_name">Fingerhut</string>
    <string name="notification_channel_description">All messages postet from Fingerhut will be displayed here</string>
    <string name="new_transfer_notification_title">New transfer</string>
    <string name="new_transfer_notification_body">Account %1$2s received a new transfer</string>
    <string name="sp_webstring" translatable="false">SHARED_PREFERENCES_webstring</string>
    <string name="more_results_suffix">s</string>
    <string name="one_more_result">1 more result</string>
    <string name="can_only_be_bought_on_checkout">Can only be bought at the checkout</string>
    <string name="checkout">Checkout</string>
    <string name="server_down">Servers are currently not available: try again later</string>
    <string name="scan_product">Scan Bar- or QR-Code</string>
    <string name="product_invalid">Product invalid</string>
    <string name="only_one_seller_message">You can not have products of more than one sellers in your cart</string>
    <string name="finish_purchase">Finish purchase</string>
    <string name="finish">Finish</string>
    <string name="buy_products_in_cart">Einkauf in Höhe von %.2fS abschließen?</string>
    <string name="session_invalid">Session invalid</string>
    <string name="loged_in_on_other_device">You are loged in on an other device</string>
    <string name="not_enough_money">Not enough money</string>
    <string name="not_enough_money_message">You don\'t have enough money to buy these items</string>
    <string name="customer_can_buy_product_by_himself">Customer can buy the product by himself</string>
    <string name="barcode_not_available">There is already a Product with this Code</string>
    <string name="send_product_success">Product was added successfully to your assortment</string>
    <string name="send_product_loading">Sending Product…</string>
    <string name="title_add_product">Add Product</string>
    <string name="error_barcode_wrong_length">This is not a valid product code</string>
    <string name="error_product_name_empty">You have to give your product a name</string>
    <string name="error_price_empty">Your product has to have a price</string>
    <string name="title_order_list">Orders</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="edit_auth_code">Edit authentification code</string>
    <string name="company_number">Company number</string>
    <string name="no_company_found">There was no company with this account number found</string>
    <string name="price">Price</string>
    <string name="product_code">Barcode</string>
    <string name="change">Change</string>
    <string name="update_item">Update item</string>
    <string name="title">Title</string>
    <string name="complete_purchase_order">Complete purchase order</string>
    <string name="confirmation_completed">Comfirmation completed</string>
    <string name="login_again">Login again</string>
    <string name="downloading_products">Downloading products…</string>
    <string name="price_cannot_be_raised">Price cannot be raised</string>
    <string name="add_purchase_order">Add purchase order</string>
    <string name="enter_accountnumber_of_buyer">Enter the account number of the buyer</string>
    <string name="old_app_version">Your app is not up to date! Please update!</string>
    <string name="select_language">Select language</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="delete_transfers">Delete transfers</string>
    <string name="name">Name</string>
    <string name="error_sender_empty">You have to give your name</string>
    <string name="vat">Value added tax</string>
    <string name="json_exception">JSON Exception</string>
    <string name="gross_total">Gross total</string>
    <string name="total">Total</string>
    <string name="net_total">Net total</string>
    <string name="account_locked_attempts">Account is locked for %d  seconds.</string>
    <string name="password_wrong_attempts_left">This password is not correct. You have %d attempts left.</string>
    <string name="account_locked">Your account is locked. Unlock it at the Central Bank.</string>
    <string name="title_activity_employees">Edit employees</string>
    <string name="title_activity_edit_employee">Edit employee</string>
    <string name="gross_wage">Gross wage</string>
    <string name="net_wage">Net wage</string>
    <string name="work_times">Work times</string>
    <string name="add_work_time">Add work time</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="edit_work_time">Edit work time</string>
    <string name="dismiss_edit">Dismiss edit</string>
    <string name="changed_data_will_not_be_saved">Your changed data will not be saved</string>
    <string name="continue_editing">Continue editing</string>
    <string name="start_time_after_end_time">Your start time is after your end time</string>
    <string name="permissions">Permissions</string>
    <string name="fcb_long" translatable="false">Future Central Bank</string>
    <string name="ministry">Ministry</string>
    <string name="parliament">Parliament</string>
    <string name="police">Police</string>
    <string name="balance">Balance</string>
    <string name="selected_balance">Your balance at the selected point was</string>
    <string name="statistics">Statistics</string>
    <string name="sp_companynumbers" translatable="false">SHARED_PREFERENCES_companynumbers</string>
    <string name="sp_companysectors" translatable="false">SHARED_PREFERENCES_companysectors</string>
    <string name="sp_companynames" translatable="false">SHARED_PREFERENCES_companynames</string>
    <string name="sp_pin" translatable="false">SHARED_PREFERENCES_pin</string>
    <string name="sp_vat" translatable="false">SHARED_PREFERENCES_vat</string>
    <string name="price_sum">Price sum: %1$sS</string>
    <string name="rest_sum">Rest sum (without VAT): %1$sS</string>
    <string name="euro_price">price (in €)</string>
    <string name="meat_custom">Meat custom</string>
    <string name="package_custom">Package custom</string>
    <string name="bio_meat_custom">Bio meat custom</string>
</resources>