<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.repictures.stromberg.Features.CustomsActivity"
    tools:showIn="@layout/activity_customs"
    android:id="@+id/customs_relative_layout"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:id="@+id/customs_companynumber_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/customs_companynumber_edit"
            android:hint="@string/company_number"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="4"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:id="@+id/customs_price_layout"
        android:layout_below="@+id/customs_companynumber_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/customs_price_edit"
            android:hint="@string/euro_price"
            android:inputType="numberDecimal"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customs_price_layout"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/customs_meat_custom_check_box_relative_layout">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:checked="false"
            android:id="@+id/customs_meat_custom__check_box"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/customs_meat_custom__check_box"
            android:text="@string/meat_custom"
            style="@style/TextAppearance.AppCompat.Title"
            android:padding="16dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customs_bio_meat_custom_check_box_relative_layout"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/customs_package_custom_check_box_relative_layout">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:checked="false"
            android:id="@+id/customs_package_custom_check_box"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/customs_package_custom_check_box"
            android:text="@string/package_custom"
            style="@style/TextAppearance.AppCompat.Title"
            android:padding="16dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customs_meat_custom_check_box_relative_layout"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/customs_bio_meat_custom_check_box_relative_layout">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:checked="false"
            android:id="@+id/customs_bio_meat_custom_check_box"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/customs_bio_meat_custom_check_box"
            android:text="@string/bio_meat_custom"
            style="@style/TextAppearance.AppCompat.Title"
            android:padding="16dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/customs_button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@+id/customs_package_custom_check_box_relative_layout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:theme="@style/LoginButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/finish"
        android:textColor="#ffffff"
        android:padding="4dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/customs_button"
        android:layout_alignLeft="@+id/customs_button"
        android:layout_alignStart="@+id/customs_button"
        android:id="@+id/customs_progress_bar"
        android:layout_alignBottom="@+id/customs_button"
        android:layout_alignRight="@+id/customs_button"
        android:layout_alignEnd="@+id/customs_button"
        android:padding="10dp"
        android:elevation="2dp"
        android:visibility="invisible"/>

</RelativeLayout>
