<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.repictures.stromberg.Features.EditAccountActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/features_edit_account_account_input_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/features_edit_account_account_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:maxLength="4"
                android:hint="@string/account_number"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/features_edit_account_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/features_edit_account_account_input_layout"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/features_edit_account_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/features_edit_account_pin_input_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/features_edit_account_name_input_layout"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/features_edit_account_pin_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="4"
                android:hint="@string/pin"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/features_edit_account_pin_input_layout"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/features_edit_account_check_box_relative_layout">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_centerVertical="true"
                android:checked="true"
                android:id="@+id/features_edit_account_delete_transfers_check_box"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/features_edit_account_delete_transfers_check_box"
                android:text="@string/delete_transfers"
                style="@style/TextAppearance.AppCompat.Title"
                android:padding="16dp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/features_edit_account_finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/finish"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:theme="@style/LoginButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:layout_below="@+id/features_edit_account_check_box_relative_layout"/>

    </RelativeLayout>

</ScrollView>
